--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^8.2.7",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
