--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "firebase": "^8.2.7",
+    "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2",
