--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && firebase deploy",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "firebase": "^8.2.7",
+    "jquery": "^3.6.1",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
